# vanilla-backgrounds

./: .gitignore  README.md  meson.build
.github/workflows/: build.yml  release.yml
backgrounds/: AUTHORS  meson.build  vanilla.xml.in
debian/: changelog  control  control.in  copyright  files  rules
